(lang dune 3.8)

;; enable coq support for dune project
(using coq 0.8)

;; project name
(name sail-koika)
(version 0.0.1)
(license GPL-3.0)
; (source
;  (github Barkhausen-Institut/tcu-koika))
(authors
 "Max Kurze       <max.kurze@mailbox.tu-dresden.de>"
 "Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>")
(maintainers
 "Max Kurze       <max.kurze@mailbox.tu-dresden.de>"
 "Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>")
(documentation "https://github.com/Barkhausen-Institut/tcu-koika")
; (package
;  (name tcu)
;  (synopsis "An implementation of the M3 TCU using Kôika")
;  (description "This project aims to reimplement the TCU hardware component of the M3 operating system using the Kôika DSL.")
;   )
